<resources>
    <string name="app_name">AndroidMail</string>
    <string name="title_activity_message_composer">MessageComposerActivity</string>
    <string name="title_activity_message_picker">MessagePickerActivity</string>
    <string name="title_activity_message_reader">MessageReaderActivity</string>
    <string name="label_user_prompt">User name:</string>
    <string name="label_password_prompt">Password:</string>
    <string name="button_login">Log In</string>
    <string name="button_new_account">New Account</string>
    <string name="message_no_network">You are not connected to a network.</string>
    <string name="message_login_failed">Log in failed.</string>
    <string name="button_compose">Compose</string>
    <string name="button_delete">Delete</string>
    <string name="button_read">Read</string>
    <string name="label_from">From:</string>
    <string name="label_subject">Subject:</string>
    <string name="button_close">Close</string>
    <string name="label_to">To:</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_send">Send</string>
</resources>
