<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.hoang.androidmail.MessagePickerActivity"
    android:weightSum="1">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:id="@+id/message_list"
        android:choiceMode="singleChoice"
        android:layout_weight="1.10"
        android:listSelector="@android:color/holo_blue_bright" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="77dp">

        <Button
            android:text="@string/button_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:onClick="newMessage" />

        <Button
            android:text="@string/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:onClick="deleteMessage" />

        <Button
            android:text="@string/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:onClick="readMessage" />
    </LinearLayout>
</LinearLayout>

